# mc1

./: .gitignore  CMakeLists.txt  CMakePresets.json
engine/: bytes.hpp  dag.cpp  dsp.cc  gccjit.hpp  math.hpp  pipewire.hpp
mc1/: __main__.py  abc.py  dag.cpp  dag.hpp  dag.py  engine.cpp  engine.py  g.py  message.py
mc1/mlang/: bytes.hpp  gccjit.hpp  math.hpp  pipewire.hpp  views.hpp
rt/: dsp.cc
